mobile baloon frame , ritual overlaping issue fixed

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -89,7 +89,7 @@
       bottom: -17px;
     }
     .fe--5 {
-      bottom: -125px;
+      bottom: -80px;
       height: 152px;
       object-fit: fill;
     }
@@ -148,7 +148,7 @@
       .vp-view {
         position: absolute;
         z-index: 1;
-        top: 21%;
+        top: 24%;
         left: 50%;
         width: 75%;
         transform: translate(-50%, -50%);
@@ -197,7 +197,7 @@
     }
     .foot-top {
       position: absolute;
-      top: -58px;
+      top: -33px;
       z-index: 20;
     }
     .footer-opt {
@@ -340,7 +340,7 @@
 
 #sm_f7_btn_ritual {
   position: absolute;
-  bottom: 7%;
+  bottom: 6%;
   width: 48%;
   display: block;
   left: 50%;
@@ -370,7 +370,7 @@
 }
 
 .sm-f7-glow-prg.sm-ritual-started {
-  height: 432px;
+  height: 412px;
 }
 
 .mobile-footer {
